Update user registration endpoint to use POST method and fix email field naming in RegisterInput
